Added running instructions, added images